# LAB-SO1-2S2025

./: .gitignore  Readme.md
cpr1/: test.sh
ejemplos/pr1/recursos-adicionales/: instalar-containerd.sh  instalar-docker.sh  zot-intrucciones.md
ejemplos/semana-1/api-go/: dockerfile
ejemplos/semana-11/: Readme.md  main.go
ejemplos/semana-12/: Dockerfile  consumer-kafka.go  consumer-rabbit.go  go.mod  go.sum  main.go
ejemplos/semana-12/k8s/: clima-app.yaml
ejemplos/semana-2/fiber-api-go/: dockerfile  go.mod  go.sum  main.go
ejemplos/semana-4/modulo-kernel/: Makefile  modulo_ejemplo.c  sysinfo.c
ejemplos/semana-6/ejemplo-docker-cronjob/: main.go  test-scripty.sh
ejemplos/semana-6/ejemplo-sqlite/: limpiar-y-buildear.sh
ejemplos/semana-7/gRPC/: client.go  server.go
ejemplos/semana-9/api_rust/: Cargo.toml
unidad_1/: Readme.md  comando-basicos-linux.md  containerd-instrucciones.md  contenedores.md  inicios_go_language.md  virtmanager-comandos-terminal.md
unidad_1/ayuda-extra/: Readme.md  ctr-instrucciones.md  zot-intrucciones.md
unidad_1/ejemplos/semana-4/: Readme.md
unidad_1/ejemplos/semana-5/: Readme.md
unidad_1/pr1/recursos-adicionales/: archivo-de-ejecucion.sh  asignar-nombre-vms.md  containerd-instrucciones.md  limpiar-cache.sh  zot-intrucciones.md
unidad_2/ejemplos/semana-10.5/ejemplo-del-video/api-rust/: Cargo.toml  Dockerfile  build.rs
unidad_2/ejemplos/semana-10.5/ejemplo-del-video/api-rust/src/: main.rs
unidad_2/ejemplos/semana-11/: dashboard.json
unidad_2/ejemplos/semana-12/: .dockerignore  consumer-kafka.go  consumer-rabbit.go  (+3 more)
(+33 files in other folders)
