[package]
name = "api_rust"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
dotenvy = "0.15"  

[build-dependencies]
tonic-build = "0.12"